// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/test/index.test.ts generate index 1`] = `
"/** This file generated by @midwayjs/bundle-helper */

export { ContainerLifeCycle as Configuration } from './configuration';
export * from './config/config.default';
export * from './controller/test/api.controller';
export * from './controller/ych/home.controller';
export * from './interface';
export * from './service/user.service';
"
`;

exports[`/test/index.test.ts fix issue11 1`] = `
"/** This file generated by @midwayjs/bundle-helper */

export { ContainerLifeCycle as Configuration } from './core/configuration';
export * from './config/config.default';
export * from './controller/test/api.controller';
export * from './controller/ych/home.controller';
export * from './interface';
export * from './service/user.service';
"
`;

exports[`/test/index.test.ts support esm project 1`] = `
"/** This file generated by @midwayjs/bundle-helper */

export { ContainerLifeCycle as Configuration } from './configuration.js';
export * from './config/config.default.js';
export * from './controller/test/api.controller.js';
export * from './controller/ych/home.controller.js';
export * from './interface.js';
export * from './service/user.service.js';
"
`;
